Se realizan mejoras en el frontend como en el backend 23/04/2026